feat: add history endpoint and check user rules
