# back-end/src/database/models/history.js
@@ -1,0 +1,72 @@
+import { Model, DataTypes } from 'sequelize';
+import sequelize from '..';
+
+class History extends Model {}
+
+History.init(
+  {
+    id: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      primaryKey: true,
+      autoIncrement: true,
+    },
+    user_id: {
+      type: DataTypes.UUID,
+      allowNull: false,
+      references: {
+        model: 'user',
+        key: 'id',
+      },
+      onUpdate: 'CASCADE',
+      onDelete: 'CASCADE',
+    },
+    order_id: {
+      type: DataTypes.UUID,
+      allowNull: false,
+    },
+    name: {
+      type: DataTypes.STRING(100),
+      allowNull: false,
+    },
+    description: {
+      type: DataTypes.STRING(500),
+      allowNull: false,
+    },
+    photoUrl: {
+      type: DataTypes.STRING(500),
+      allowNull: false,
+    },
+    unitSign: {
+      type: DataTypes.STRING(10),
+      allowNull: false,
+    },
+    currencySign: {
+      type: DataTypes.STRING(10),
+      allowNull: false,
+    },
+    price: {
+      type: DataTypes.DOUBLE,
+      allowNull: false,
+    },
+    weight: {
+      type: DataTypes.DOUBLE,
+      allowNull: false,
+    },
+    count: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+    },
+    date: {
+      type: DataTypes.DATE,
+      allowNull: false,
+    },
+  },
+  {
+    sequelize,
+    tableName: 'history',
+    timestamps: false,
+  },
+);
+
+export default History;
