# back-end/src/database/models/user.js
@@ -1,4 +1,5 @@
-import { DataTypes, Model } from 'sequelize';
+import { Model, DataTypes } from 'sequelize';
+import { v4 as uuidv4 } from 'uuid';
 import sequelize from '..';
 
 class User extends Model {}
@@ -6,10 +7,10 @@ class User extends Model {}
 User.init(
   {
     id: {
-      type: DataTypes.INTEGER,
-      allowNull: false,
+      type: DataTypes.UUID,
+      unique: true,
       primaryKey: true,
-      autoIncrement: true,
+      defaultValue: uuidv4(),
     },
     login: {
       type: DataTypes.STRING(50),
@@ -27,8 +28,20 @@ User.init(
       type: DataTypes.STRING(20),
       allowNull: false,
     },
+    city: {
+      type: DataTypes.STRING(50),
+    },
+    street: {
+      type: DataTypes.STRING(50),
+    },
+    home: {
+      type: DataTypes.STRING(50),
+    },
+    apartment: {
+      type: DataTypes.STRING(50),
+    },
     user_type: {
-      type: DataTypes.INTEGER,
+      type: DataTypes.STRING(50),
       allowNull: false,
     },
   },
@@ -36,7 +49,7 @@ User.init(
     sequelize,
     tableName: 'user',
     timestamps: false,
-  }
+  },
 );
 
 export default User;
