# back-end/src/routes/authRoute.js
@@ -1,9 +1,15 @@
 import express from 'express';
+
+import checkRole from '../middleware/checkRole';
+
 import { login, register } from '../controllers/authController';
 
 const authRoute = express.Router();
 
-authRoute.post('/login', login);
-authRoute.post('/register', register);
+const { GUEST_RULE, USER_RULE, ADMIN_RULE } = process.env;
+
+authRoute.post('/login', checkRole([USER_RULE, ADMIN_RULE, GUEST_RULE]), login);
+
+authRoute.post('/register', checkRole([USER_RULE, ADMIN_RULE, GUEST_RULE]), register);
 
 export default authRoute;
